# edge-ai-metal-detector

./: CHANGELOG.md  README.md  pyproject.toml
data/: README.md  sample_waveforms.csv
docs/: ai_methodology.md  cli_reference.md  mathematical_model.md  signal_processing_pipeline.md  system_architecture.md
examples/: confirmed_memory_demo.py  evaluation_report.py  export_sample_dataset.py  generate_waveform_plot.py  run_single_prediction.py  train_and_evaluate.py
reports/: classification_metrics.csv  confusion_matrix.csv
src/pi_detector/: __init__.py  classifier.py  cli.py  dataset_generator.py  feature_extraction.py  ground_balance.py  materials.py  pipeline.py  pulse_model.py  soil.py  waveform_memory.py
tests/: test_classifier.py  test_feature_extraction.py  test_waveform_memory.py
